--- a/ControlWork9/appsettings.json
+++ b/ControlWork9/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=control_work9;User Id=postgres;Password=9631;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
